# documind

./: docker-compose.yml  eval_report.json  eval_report.md  pyproject.toml
migrations/: 001_initial_migration.sql  002_full_text_search.sql
scripts/: backfill.py  check_db.py  seed.py
src/documind/: __init__.py  api.py  auth.py  config.py  database.py  embeddings.py  ingest.py  llm.py  migrate.py  pipeline.py  prompts.py  rbac.py  retrieval.py  tracing.py
src/evalkit/: cli.py  hallucination.py  metrics.py  report.py  retrieval_metrics.py  runner.py  testset.py
src/evalkit/testsets/: interview_prep.yaml
tests/: test_api.py  test_evalkit.py  test_pipeline.py  test_rbac.py  test_retrieval.py
