[project]
name = "documind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "abhijayanoop-elcarreira", email = "abhijay@elcarreira.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm==1.51.0",
    "pgvector==0.3.6",
    "psycopg[binary]==3.2.3",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
]

[project.scripts]
documind = "documind:main"

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest==8.3.3",
]
